[package]
name = "actuator-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust crate for actor"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/j5ik2o/actuator-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
thiserror = "1.0.35"
log = "0.4"
mur3 = "0.1.0"
regex = "1"
once_cell = "1.14.0"
oni-comb-uri-rs = "0.0.7"

[dev-dependencies]
ctor = "0.1.23"
env_logger = "0.9.0"
fp_rust = "0.3.5"