[package]
name = "actuator-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust crate for actor"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/j5ik2o/actuator-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
anyhow = "1.0.65"
thiserror = "1.0.35"
log = "0.4"
mur3 = "0.1.0"
regex = "1"
once_cell = "1.14.0"
oni-comb-uri-rs = "0.2.1"
num_enum = "0.5.2"
futures = "0.3.18"
tokio= { version = "1.15.0", features = ["full", "test-util"] }
tokio-test = "0.4.2"
rand = "0.8.4"
async-trait = "0.1.51"
ulid-generator-rs = "0.0.14"
mockall_double = "0.2.1"
crossbeam = "0.8"
base64 = "0.21.0"
base64-string-rs = "0.0.1"
[dev-dependencies]
ctor = "0.2.0"
env_logger = "0.10.0"
mockall = "0.11.2"