[package]
name = "actuator-support-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
thiserror = "1.0.26"
owning_ref = "0.4.1"
log = "0.4"

[dev-dependencies]
env_logger = "0.9.0"